# ornitools

./: .env-example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  create-docker-network.sh  docker-compose.yml  inspirations.md
backend/: .gitignore  .gitlab-ci.yml  Dockerfile  pyproject.toml  requirements.txt
backend/core/: celery.py  settings.py  urls.py
backend/ornitools/: admin.py  apps.py  models.py  urls.py
backend/ornitools/api/bird/: filters.py  serializers.py  views.py
backend/ornitools/api/gps_device/: serializers.py  views.py
backend/ornitools/api/gps_file/: filters.py  serializers.py  signals.py  tasks.py  views.py
backend/ornitools/api/gps_file/utils/: gps_file_handler.py
backend/ornitools/api/gps_position/: filters.py  serializers.py  views.py
backend/ornitools/api/species/: serializers.py  views.py
backend/ornitools/migrations/: 0001_initial.py  0002_remove_bird_age_remove_bird_sex.py  0003_gpsfile_alter_gpsposition_position_file_and_more.py  0004_rename_position_file_gpsposition_gps_file.py  0005_rename_identifier_bird_name_and_more.py  0006_alter_bird_given_name_and_more.py  0007_bird_description.py  0008_bird_color.py  0009_remove_gpsposition_unique_gps_position_and_more.py
backend/users/: models.py
frontend/: .dockerignore  .eslintrc.json  .gitlab-ci.yml  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
frontend/src/: env.d.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(main)/: layout.tsx
frontend/src/components/: app-sidebar.tsx  auth-provider.tsx  breadcrumb-provider.tsx  data-provider.tsx  login-form.tsx  nav-main.tsx  nav-user.tsx  providers.tsx  sidebar-appbrand.tsx  signup-form.tsx  site-header.tsx
frontend/src/components/landing_page/: About.tsx  Features.tsx  Footer.tsx  Hero.tsx  HeroCards.tsx  HowItWorks.tsx  Icons.tsx  Navbar.tsx  Newsletter.tsx  ScrollToTop.tsx  Services.tsx  Sponsors.tsx  Statistics.tsx  Team.tsx
frontend/src/components/map/: bird-picker-carousel.tsx  bird-picker-columns.tsx  bird-picker-table.tsx  bird-picker.tsx  date-picker.tsx  position-selecter.tsx  route-map.tsx
frontend/src/components/ui/: button.tsx  checkbox.tsx  color-picker.tsx  command.tsx  datatable.tsx  dropzone.tsx  loading-spinner.tsx  sheet.tsx  show-page-fields.tsx  sidebar.tsx  table.tsx  toast.tsx
frontend/src/config/: site.ts
frontend/src/hooks/: use-auth.ts  use-mobile.tsx
frontend/src/tanstack/features/: auth.ts  client.ts
frontend/src/types/: user.ts
(+24 files in other folders)
